--- a/index.html
+++ b/index.html
@@ -12,87 +12,92 @@
 
   <!-- PWA manifest -->
   <link rel="manifest" href="manifest.webmanifest">
-  <meta name="theme-color" content="#1f2125">
+  <meta name="theme-color" content="#1b1d21">
 
   <style>
     :root{
-      /* Dark gray + lavender palette */
-      --bg:#1f2125;           /* page background */
-      --surface:#2a2d33;      /* cards */
-      --surface-2:#24262b;    /* header/footer */
-      --fg:#e9e9ef;           /* text */
-      --muted:#b4b5c4;        /* secondary text */
-      --lav-1:#c4b5fd;        /* light lavender */
-      --lav-2:#a78bfa;        /* mid lavender */
-      --lav-3:#8b5cf6;        /* deep lavender */
-      --accent:var(--lav-2);
-      --ok:#7dd3fc;           /* cyan accents for variety */
-      --warn:#fbbf24;
+      /* Sleek dark + signal colors */
+      --bg:#1b1d21;          /* page */
+      --surface:#23262b;     /* cards */
+      --surface-2:#1f2227;   /* header/footer */
+      --fg:#ececf1;          /* text */
+      --muted:#a9adba;       /* secondary */
+
+      /* Mood (dark) */
+      --mood-red:#b91c1c;    /* dark red */
+      --mood-yellow:#b45309; /* dark amber */
+      --mood-green:#166534;  /* dark green */
+
+      /* Energy (light) */
+      --energy-red:#FCA5A5;  /* light red */
+      --energy-yellow:#FDE68A;/* light yellow */
+      --energy-green:#86EFAC;/* light green */
+
+      --accent:#8b5cf6;      /* subtle lavender accent */
       --danger:#ef4444;
-      --radius:16px;          /* rounded */
       --pad:16px;
+      --radius:8px;          /* less rounded */
+      --radius-sm:6px;
     }
     *{box-sizing:border-box}
-    html,body{margin:0;height:100%;font-family:system-ui,-apple-system,Segoe UI,Inter,Roboto,Helvetica,Arial}
+    html,body{margin:0;height:100%;font-family:Inter,system-ui,-apple-system,Segoe UI,Roboto,Helvetica,Arial}
     body{background:var(--bg);color:var(--fg)}
 
     /* Safe-area aware wrapper */
     .wrap{min-height:100dvh;display:grid;grid-template-rows:auto 1fr auto}
     header{position:sticky;top:0;background:var(--surface-2);
       padding:calc(env(safe-area-inset-top) + 8px) var(--pad) 8px var(--pad);
-      display:flex;align-items:center;gap:12px;z-index:10;box-shadow:0 2px 0 rgba(0,0,0,.2)}
-    h1{font-size:18px;margin:0}
+      display:flex;align-items:center;gap:12px;z-index:10;border-bottom:1px solid rgba(255,255,255,.06)}
+    h1{font-size:18px;margin:0;font-weight:600}
     .spacer{height:8px}
 
-    .card{margin:12px; padding:var(--pad); border-radius:var(--radius); background:var(--surface);
-      box-shadow:0 10px 30px rgba(0,0,0,.25)}
+    .card{margin:12px;padding:var(--pad);border-radius:var(--radius);background:var(--surface);
+      border:1px solid rgba(255,255,255,.06)}
 
     /* Buttons */
-    button{appearance:none;border:0;border-radius:12px;padding:10px 12px;cursor:pointer;color:#12121a;background:#3a3d46}
-    .primary{background:var(--accent);color:#1a1330;font-weight:700}
-    .ghost{background:transparent;border:1px solid rgba(255,255,255,.14);color:var(--fg)}
-    .danger{background:var(--danger);color:#fff}
+    button{appearance:none;border:1px solid rgba(255,255,255,.10);border-radius:8px;padding:10px 12px;cursor:pointer;color:var(--fg);background:#2b2f35}
+    button:hover{filter:brightness(1.06)}
+    .primary{background:var(--accent);border-color:transparent;color:#140f24;font-weight:700}
+    .ghost{background:transparent}
+    .danger{background:var(--danger);border-color:transparent;color:#fff}
 
     .row{display:flex;gap:8px;align-items:center}
     .between{justify-content:space-between}
 
-    /* Mood/Energy */
+    /* Chips (squarer) */
     .chip-row{display:flex;gap:8px;flex-wrap:wrap}
-    .chip{border:1px solid rgba(255,255,255,.12);padding:8px 10px;border-radius:999px;cursor:pointer}
-    .chip.active{background:linear-gradient(180deg, var(--lav-1), var(--lav-3));color:#120e1e;border-color:transparent}
+    .chip{border:1px solid rgba(255,255,255,.12);padding:8px 10px;border-radius:8px;cursor:pointer;background:#262a31}
+    .chip.active{outline:2px solid var(--accent);outline-offset:0}
 
+    /* 7-day history (sleek squares with inner energy bar) */
     .history{display:grid;grid-template-columns:repeat(7,1fr);gap:6px;margin-top:10px}
-    .dot{height:14px;border-radius:999px;background:#3a3d46}
-    .dot.m1{background:#6b7280}
-    .dot.m2{background:var(--lav-1)}
-    .dot.m3{background:var(--lav-2)}
-    .dot.m4{background:var(--lav-3)}
-    .dot.m5{background:#6d28d9}
+    .dot{height:14px;border-radius:4px;background:#343842;position:relative;overflow:hidden;border:1px solid rgba(255,255,255,.08)}
+    .dot .inner{position:absolute;left:50%;transform:translateX(-50%);bottom:1px;width:4px;border-radius:3px}
 
-    textarea{width:100%;min-height:70px;border-radius:12px;border:1px solid rgba(255,255,255,.12);background:#1e2025;color:var(--fg);padding:10px;resize:vertical}
+    textarea{width:100%;min-height:70px;border-radius:8px;border:1px solid rgba(255,255,255,.12);background:#1e2025;color:var(--fg);padding:10px;resize:vertical}
 
     /* Spinner */
     .list{display:flex;flex-wrap:wrap;gap:8px;margin-top:8px}
-    .pill{display:inline-flex;align-items:center;gap:8px;padding:8px 10px;border-radius:999px;background:#333744;border:1px solid rgba(255,255,255,.1)}
-    .pill.done{opacity:.65;text-decoration:line-through}
-    .pill .x{appearance:none;background:transparent;border:0;color:#b0b3c6;cursor:pointer;font-size:14px;line-height:1}
-    .pill .x:hover{color:#e5e7ef}
+    .pill{display:inline-flex;align-items:center;gap:8px;padding:8px 10px;border-radius:8px;background:#2b2f35;border:1px solid rgba(255,255,255,.10)}
+    .pill.done{opacity:.75;text-decoration:line-through}
+    .pill .x{appearance:none;background:transparent;border:0;color:#c2c6d4;cursor:pointer;font-size:14px;line-height:1}
+    .pill .x:hover{color:#fff}
 
-    .result{margin-top:10px;padding:12px;border-radius:12px;background:#1e2025;border:1px dashed rgba(255,255,255,.15);display:flex;align-items:center;gap:8px}
+    .result{margin-top:10px;padding:12px;border-radius:8px;background:#1e2025;border:1px dashed rgba(255,255,255,.15);display:flex;align-items:center;gap:8px}
     .result.hidden{display:none}
 
     /* Spin animation */
-    #wheel{width:28px;height:28px;border-radius:50%;border:4px solid var(--lav-1);border-top-color:var(--lav-3);display:none}
+    #wheel{width:24px;height:24px;border-radius:50%;border:3px solid #a78bfa;border-top-color:#6d28d9;display:none}
     .spinning #wheel{display:inline-block;animation:spin 0.9s linear infinite}
     .spinning #spinBtn{pointer-events:none;opacity:.7}
     @keyframes spin{from{transform:rotate(0)}to{transform:rotate(360deg)}}
 
-    footer{background:var(--surface-2);padding:8px var(--pad) calc(env(safe-area-inset-bottom) + 8px);color:var(--muted);font-size:12px}
+    footer{background:var(--surface-2);padding:8px var(--pad) calc(env(safe-area-inset-bottom) + 8px);color:var(--muted);font-size:12px;border-top:1px solid rgba(255,255,255,.06)}
 
     /* Summary section */
     #summaryWrap{display:none;margin-top:10px}
     #summaryWrap.open{display:block}
-    #summaryCanvas{width:100%;height:90px;display:block}
+    #summaryCanvas{width:100%;height:100px;display:block}
   </style>
 </head>
 <body>
@@ -111,7 +116,7 @@
     <!-- Mood/Energy Card -->
     <section class="card" aria-labelledby="moodhdr">
       <div class="row between">
-        <h2 id="moodhdr" style="margin:0;font-size:16px">Today · <span id="today"></span></h2>
+        <h2 id="moodhdr" style="margin:0;font-size:16px;font-weight:600">Today · <span id="today"></span></h2>
         <div class="row">
           <button id="summaryBtn" class="ghost" title="Show 30‑day summary">30‑day summary</button>
           <button id="saveBtn" class="primary">Save</button>
@@ -133,7 +138,7 @@
       <div id="summaryWrap">
         <canvas id="summaryCanvas"></canvas>
         <div class="row" style="justify-content:space-between;margin-top:6px;color:var(--muted);font-size:12px">
-          <span>Last 30 days · mood (1–5) + energy overlay</span>
+          <span>Last 30 days · mood (dark) + energy (light)</span>
           <span id="summaryStats"></span>
         </div>
       </div>
@@ -142,9 +147,9 @@
     <!-- Spinner Card -->
     <section class="card" aria-labelledby="spinhdr">
       <div class="row between">
-        <h2 id="spinhdr" style="margin:0;font-size:16px">Random Task Spinner</h2>
+        <h2 id="spinhdr" style="margin:0;font-size:16px;font-weight:600">Random Task Spinner</h2>
         <div class="row">
-          <input id="newTask" placeholder="Add a task…" style="background:#1e2025;border:1px solid rgba(255,255,255,.12);color:var(--fg);padding:8px 10px;border-radius:10px;min-width:140px"/>
+          <input id="newTask" placeholder="Add a task…" style="background:#1e2025;border:1px solid rgba(255,255,255,.12);color:var(--fg);padding:8px 10px;border-radius:6px;min-width:140px"/>
           <button id="addBtn" class="ghost">Add</button>
           <button id="spinBtn" class="primary">Spin 🎲</button>
         </div>
@@ -158,7 +163,7 @@
   </main>
 
   <footer>
-    Offline • Add to Home Screen in Safari • v1.3
+    Offline‑ready • Add to Home Screen in Safari • v1.4
   </footer>
 </div>
 
@@ -170,7 +175,7 @@ const LS_KEY = 'moodspin-v1';
 const load = () => { try { return JSON.parse(localStorage.getItem(LS_KEY))||{} } catch { return {} } };
 const save = s => localStorage.setItem(LS_KEY, JSON.stringify(s));
 
-// State shape: { entries:{[date]:{mood:number, energy:number, note:string}}, tasks:[string], done:{[date]:{[taskIndex]:true}} }
+// State: { entries:{[date]:{mood:number, energy:number, note:string}}, tasks:[string], done:{[date]:{[taskIndex]:true}} }
 const EMOJI = ['😣','🙁','😐','🙂','😀']; // 1..5
 const ENERGY = ['1','2','3','4','5'];     // 1..5
 
@@ -180,17 +185,31 @@ const noteEl = document.getElementById('note');
 const historyEl = document.getElementById('history');
 const spinResult = document.getElementById('spinResult');
 const spinText = document.getElementById('spinText');
-const wheel = document.getElementById('wheel');
 
 function ensureState(){
   const s=load();
   s.entries = s.entries || {};
   s.tasks   = s.tasks   || ['Dishes','Tidy 5 min','Wipe counters','Water plants'];
-  s.done    = s.done    || {}; // per-day map: { [YYYY-MM-DD]: { [taskIndex]: true } }
+  s.done    = s.done    || {}; // per-day map
   save(s);
 }
 
 function renderHeader(){ document.getElementById('today').textContent = fmtDate(); }
+
+// Color helpers
+function moodColor(v){
+  if(!v) return '#343842';
+  if(v<=2) return getCSS('--mood-red');
+  if(v===3) return getCSS('--mood-yellow');
+  return getCSS('--mood-green');
+}
+function energyColor(v){
+  if(!v) return '#3a3d46';
+  if(v<=2) return getCSS('--energy-red');
+  if(v===3) return getCSS('--energy-yellow');
+  return getCSS('--energy-green');
+}
+function getCSS(name){ return getComputedStyle(document.documentElement).getPropertyValue(name).trim(); }
 
 function renderMoodEnergy(){
   const s=load(); const d=todayKey(); const e=s.entries[d]||{};
@@ -211,10 +230,18 @@ function renderHistory(){
   const s=load(); historyEl.innerHTML='';
   for(let i=6;i>=0;i--){
     const dt=new Date(); dt.setDate(dt.getDate()-i); const key=dt.toISOString().slice(0,10);
-    const e=s.entries[key];
+    const e=s.entries[key]||{};
     const dot=document.createElement('div'); dot.className='dot';
-    if(e && e.mood){ dot.classList.add('m'+e.mood); }
-    dot.title = (e? `${dt.toDateString()} • Mood ${e.mood||'-'} • Energy ${e.energy||'-'}` : dt.toDateString());
+    // Mood as background color
+    dot.style.background = moodColor(e.mood);
+    // Energy as thin center bar with proportional height
+    const inner=document.createElement('span'); inner.className='inner';
+    inner.style.background = energyColor(e.energy);
+    const h = 12 * ((e.energy||0)/5); // 0..12px
+    inner.style.height = Math.max(2, Math.round(h)) + 'px';
+    dot.appendChild(inner);
+
+    dot.title = `${dt.toDateString()} • Mood ${e.mood||'-'} • Energy ${e.energy||'-'}`;
     historyEl.appendChild(dot);
   }
 }
@@ -269,7 +296,7 @@ function spinTask(){ const s=load(); if(!s.tasks.length){ alert('Add a task firs
 function shareTip(){ if(navigator.share){ navigator.share({title:'Mood & Spin', text:'Add to Home Screen for app‑like mode', url:location.href}); } else alert('In Safari, tap Share → Add to Home Screen'); }
 function wipe(){ if(confirm('Wipe all data?')){ localStorage.removeItem(LS_KEY); location.reload(); } }
 
-// 30‑day summary with mood color mapping + energy overlay
+// 30‑day summary (mood = dark bars, energy = light overlay)
 const summaryBtn = document.getElementById('summaryBtn');
 const summaryWrap = document.getElementById('summaryWrap');
 const summaryCanvas = document.getElementById('summaryCanvas');
@@ -282,7 +309,7 @@ function drawSummary(){
   const s=load();
   const ctx = summaryCanvas.getContext('2d');
   const dpr = window.devicePixelRatio || 1;
-  const cssW = summaryCanvas.clientWidth || 300; const cssH = summaryCanvas.clientHeight || 90;
+  const cssW = summaryCanvas.clientWidth || 300; const cssH = summaryCanvas.clientHeight || 100;
   summaryCanvas.width = Math.floor(cssW*dpr); summaryCanvas.height = Math.floor(cssH*dpr);
   ctx.setTransform(dpr,0,0,dpr,0,0);
   ctx.clearRect(0,0,cssW,cssH);
@@ -296,41 +323,41 @@ function drawSummary(){
   const avg = count? (sum/count).toFixed(2) : '-';
   summaryStats.textContent = `avg ${avg} • filled ${count}/30`;
 
-  // Colors mapping (mood & energy use same scheme)
-  const colorFor = (v)=>{
-    if(!v) return '#3a3d46';
-    if(v<=2) return '#FCA5A5';      // light red
-    if(v===3) return '#FDE68A';     // light yellow
-    return '#86EFAC';               // light green
-  };
-
-  // Draw bars with overlay
-  const pad = 6; const w = cssW - pad*2; const h = cssH - pad*2; const gap = 2; const barW = (w/30) - gap;
-  ctx.lineWidth = 1;
+  // Draw bars
+  const pad = 8; const w = cssW - pad*2; const h = cssH - pad*2; const gap = 2; const barW = (w/30) - gap;
   days.forEach((d,idx)=>{
     const x = pad + idx*(barW+gap);
     const mood = d.entry && d.entry.mood ? d.entry.mood : 0;
     const energy = d.entry && d.entry.energy ? d.entry.energy : 0;
 
     // background track
-    ctx.fillStyle = '#333744'; ctx.fillRect(x, pad, barW, h);
-
-    // mood bar
+    const track = '#2b2f35';
     const mH = Math.max(2, h * (mood/5));
-    ctx.fillStyle = colorFor(mood);
+    const eH = Math.max(2, h * (energy/5));
+
+    // track
+    ctx.fillStyle = track; ctx.fillRect(x, pad, barW, h);
+
+    // mood bar (dark)
+    ctx.fillStyle = moodColor(mood);
     ctx.fillRect(x, pad + (h - mH), barW, mH);
 
-    // energy overlay (thinner bar centered)
-    const eH = Math.max(2, h * (energy/5));
+    // energy overlay (light + narrower with alpha)
     const eW = Math.max(2, barW * 0.5);
     const ex = x + (barW - eW)/2;
-    ctx.fillStyle = colorFor(energy) + 'CC'; // add alpha
+    ctx.fillStyle = hexWithAlpha(energyColor(energy), 0.85);
     ctx.fillRect(ex, pad + (h - eH), eW, eH);
 
-    // subtle outline for readability
+    // outline
     ctx.strokeStyle = 'rgba(0,0,0,0.25)';
     ctx.strokeRect(x+0.5, pad+0.5, barW-1, h-1);
   });
+}
+function hexWithAlpha(hex, alpha){
+  // hex like #RRGGBB, return rgba()
+  if(!hex || hex[0] !== '#') return hex;
+  const r=parseInt(hex.slice(1,3),16), g=parseInt(hex.slice(3,5),16), b=parseInt(hex.slice(5,7),16);
+  return `rgba(${r},${g},${b},${alpha})`;
 }
 
 // Daily roll: reset strike-throughs for a new day
